--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,31 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My Profile</h2>
+    <p th:text = "${name}"></p>
+    <p th:text = "${skintype}"></p>
+    <p th:text="${manipedi}"></p>
 </div>
 <div id = "servicesMenu">
+<!--    Add a table and iteratively (using our th:block and th:each combo) add rows for the values in appropriateFacials-->
+    <th:block th:each ="facial: ${appropriateFacials}">
+        <p th:text="${facial}"><</p>
+    </th:block>
+<!--    Use th:if to determine if the value of manipedi is a "manicure" or "pedicure".-->
+<!--    If the value of manipedi is "manicure", the div element containing the h3 that says "Manicure" needs to be on the -->
+<!--    page and the p tag needs to be replaced with the fragment of the manicure description from fragments.html-->
+    <div th:if="${manipedi == 'manicure' or manipedi == 'both'}" class="manipedi">
+        <h3>Manicure</h3>
+        <p th:replace="fragments :: manicureDescription" ></p>
+    </div>
+<!--    If the value of manipedi is "pedicure", the div element containing the h3 that says "Pedicure" needs to be on the -->
+<!--    page and the p tag needs to be replaced with the fragment of the pedicure description from fragments.html-->
+    <div th:if="${manipedi == 'pedicure' or manipedi == 'both'}" class="manipedi">
+        <h3>Pedicure</h3>
+        <p th:replace="fragments :: pedicureDescription"></p>
+    </div>
 </div>
 </body>
 </html>
+
+
