--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,30 +9,30 @@
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
     <h2>My Profile</h2>
-    <p th:text = "${name}"></p>
-    <p th:text = "${skintype}"></p>
-    <p th:text="${manipedi}"></p>
+    <p th:text = "${client.skinType}"></p>
+    <p th:text = "${client.nailService}"></p>
 </div>
 <div id = "servicesMenu">
-<!--    Add a table and iteratively (using our th:block and th:each combo) add rows for the values in appropriateFacials-->
-    <th:block th:each ="facial: ${appropriateFacials}">
-        <p th:text="${facial}"><</p>
-    </th:block>
-<!--    Use th:if to determine if the value of manipedi is a "manicure" or "pedicure".-->
-<!--    If the value of manipedi is "manicure", the div element containing the h3 that says "Manicure" needs to be on the -->
-<!--    page and the p tag needs to be replaced with the fragment of the manicure description from fragments.html-->
-    <div th:if="${manipedi == 'manicure' or manipedi == 'both'}" class="manipedi">
-        <h3>Manicure</h3>
-        <p th:replace="fragments :: manicureDescription" ></p>
+    <h2>Menu of Available Services</h2>
+    <div>
+        <h3>Facial Treatments</h3>
+        <p>The below facial treatments are recommended by our estheticians for your given skin type.</p>
+        <table>
+            <th:block th:each = "facial : ${client.appropriateFacials}">
+                <tr>
+                    <td th:text = "${facial}"></td>
+                </tr>
+            </th:block>
+        </table>
     </div>
-<!--    If the value of manipedi is "pedicure", the div element containing the h3 that says "Pedicure" needs to be on the -->
-<!--    page and the p tag needs to be replaced with the fragment of the pedicure description from fragments.html-->
-    <div th:if="${manipedi == 'pedicure' or manipedi == 'both'}" class="manipedi">
+    <div th:if = "${client.nailService == 'manicure'}">
+        <h3>Manicure</h3>
+        <p th:replace =  "fragments :: manicureDescription"></p>
+    </div>
+    <div th:if = "${client.nailService == 'pedicure'}">
         <h3>Pedicure</h3>
-        <p th:replace="fragments :: pedicureDescription"></p>
+        <p th:replace = "fragments :: pedicureDescription"></p>
     </div>
 </div>
 </body>
 </html>
-
-
