--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -8,28 +8,29 @@
 <form method="post" th:action="@{/user}">
     <div class="form-group">
         <label>Username
-            <input type="text" name="username" class="form-control">
+            <input type="text" name="username" th:value="${username}">
         </label>
     </div>
     <div class="form-group">
         <label>Email
-            <input type="email" name="email" class="form-control">
+            <input type="email" name="email" th:value="${email}">
         </label>
     </div>
     <div class="form-group">
         <label>Password
-            <input type="password" name="password" class="form-control">
+            <input type="password" name="password">
         </label>
     </div>
     <div class="form-group">
         <label>Confirm Password
-            <input type="password" name="verify" class="form-control">
+            <input type="password" name="verify">
         </label>
     </div>
-    <div class="form-group">
-        <input type="submit" value="Submit" class="btn btn-success">
-
-    </div>
+<!--    <div class="form-group">-->
+<!--        <input type="submit" value="Submit" class="btn btn-success">-->
+<!--    </div>-->
+    <p th:text="${error}"></p>
+    <input type="submit" value="Sign up">
 </form>
 
 </body>
